# logix-workbench

./: .gitignore  Cargo.toml  LICENSE  README.md  build_exe.sh  run.bat  run.sh
backend/: L5XEditor.spec  l5x_handler.py  launcher.py  main.py  requirements.txt
frontend/: app.js  guide.html  index.html  ladder.js  style.css
src/: main.rs  state.rs
src/api/: aois.rs  compare.rs  datatypes.rs  misc.rs  mod.rs  modules.rs  programs.rs  project.rs  routines.rs  rungs.rs  static_files.rs  tags.rs  tasks.rs  trends.rs
src/l5x/: diff.rs  mod.rs  read.rs  write.rs
